# botcomm

./: .gitignore  admins.txt  channels.txt  config.py  main.py  proxy.txt  pyproject.toml  settings.json
accounts/: main.session
