[tool.poetry]
name = "comment-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "comment_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.26.1"
aiogram = "^2.24"
peewee = "^3.15.4"
python-socks = {extras = ["asyncio"], version = "^2.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
